feat: add basic database report saving
